# astrology

./: README.md
backend/: .env  .env.example  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CompatibilityForm.jsx  Disclaimer.jsx  FeatureSelector.jsx  Header.jsx  NatalChartForm.jsx  QuickHoroscopeForm.jsx  ResultDisplay.jsx  Stars.jsx
