[project]
name = "astralsage-backend"
version = "1.0.0"
description = "AstralSage - Astrology Prediction API powered by FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["astrology", "fastapi", "api", "horoscope"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

